# poll-api

./: .env  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: general.yml
config/: base.yml  local.yml
migrations/: 20230128052507_add_poll_table.down.sql  20230128052507_add_poll_table.up.sql  20230129023512_add_poll_choice_table.down.sql  20230129023512_add_poll_choice_table.up.sql  20230129025304_add_poll_vote_table.down.sql  20230129025304_add_poll_vote_table.up.sql
scripts/: init_db.sh
src/: config.rs  helpers.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: created_poll.rs  mod.rs  new_poll.rs  new_poll_choice.rs  poll.rs  poll_choice.rs  poll_results.rs  poll_vote.rs
src/errors/: http_error.rs  internal_error.rs  mod.rs
src/repositories/: mod.rs  poll.rs  poll_vote.rs
src/routes/: mod.rs  polls.rs
tests/api/: create_poll.rs  get_poll.rs  get_poll_results.rs  health_check.rs  helpers.rs  main.rs  vote_poll.rs
