[package]
name = "poll-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "poll-api"

[dependencies]
actix-web = "4"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"]}
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock", "serde"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
  "ipnetwork",
]

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
once_cell = "1.17.0"
